srcMyCoreApp/main/default/objects/Account/fields/Adamcustomfield__c.field-meta.xml
<CustomField>
    <fullName>Adamcustomfield__c</fullName>
    <label>Adamcustomfield</label>
    <length>56</length>
    <type>Text</type>
</CustomField>