srcMyCoreApp/main/default/objects/Account/fields/bpchecker__c.field-meta.xml
<CustomField>
    <fullName>bpchecker__c</fullName>
    <label>bpchecker</label>
    <length>45</length>
    <type>Text</type>
</CustomField>