srcMyCoreApp/main/default/objects/Account/fields/Dxbasebranchtesting_label__c.field-meta.xml
<CustomField>
    <fullName>Dxbasebranchtesting_label__c</fullName>
    <label>Dxbasebranchtesting label</label>
    <length>250</length>
    <type>Text</type>
</CustomField>