srcMyCoreApp/main/default/objects/Account/fields/Dxtestfcustomfield__c.field-meta.xml
<CustomField>
    <fullName>Dxtestfcustomfield__c</fullName>
    <label>Dxtestfcustomfield</label>
    <length>250</length>
    <type>Text</type>
</CustomField>