srcMyCoreApp/main/default/objects/Account/fields/Int1Rollback__c.field-meta.xml
<CustomField>
    <fullName>Int1Rollback__c</fullName>
    <label>Int1Rollback</label>
    <length>56</length>
    <type>Text</type>
</CustomField>