srcMyCoreApp/main/default/objects/Account/fields/Int2Rollback__c.field-meta.xml
<CustomField>
    <fullName>Int2Rollback__c</fullName>
    <label>Int2Rollback</label>
    <length>30</length>
    <type>Text</type>
</CustomField>