srcMyCoreApp/main/default/objects/Account/fields/Mergeordertest1__c.field-meta.xml
<CustomField>
    <fullName>Mergeordertest1__c</fullName>
    <label>Mergeordertest1</label>
    <type>TextArea</type>
</CustomField>