srcMyCoreApp/main/default/objects/Account/fields/Mergeordertest2dev5__c.field-meta.xml
<CustomField>
    <fullName>Mergeordertest2dev5__c</fullName>
    <label>Mergeordertest2dev5</label>
    <type>Date</type>
</CustomField>