srcMyCoreApp/main/default/objects/Account/fields/pooja1__c.field-meta.xml
<CustomField>
    <fullName>pooja1__c</fullName>
    <label>pooja1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>