srcMyCoreApp/main/default/objects/Account/fields/poojatestrollback1__c.field-meta.xml
<CustomField>
    <fullName>poojatestrollback1__c</fullName>
    <label>poojatestrollback1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>