srcMyCoreApp/main/default/objects/Account/fields/poojatestrollback2__c.field-meta.xml
<CustomField>
    <fullName>poojatestrollback2__c</fullName>
    <label>poojatestrollback2</label>
    <length>70</length>
    <type>Text</type>
</CustomField>