srcMyCoreApp/main/default/objects/Account/fields/Rollbackpooja3__c.field-meta.xml
<CustomField>
    <fullName>Rollbackpooja3__c</fullName>
    <label>Rollbackpooja3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>