srcMyCoreApp/main/default/objects/Account/fields/Rollbak_test1__c.field-meta.xml
<CustomField>
    <fullName>Rollbak_test1__c</fullName>
    <label>Rollbak test1</label>
    <type>TextArea</type>
</CustomField>