srcMyCoreApp/main/default/objects/Account/fields/Rollbak_test2__c.field-meta.xml
<CustomField>
    <fullName>Rollbak_test2__c</fullName>
    <label>Rollbak test2</label>
    <type>Phone</type>
</CustomField>