srcMyCoreApp/main/default/objects/Account/fields/Rollbak_test3__c.field-meta.xml
<CustomField>
    <fullName>Rollbak_test3__c</fullName>
    <label>Rollbak test3</label>
    <type>TextArea</type>
</CustomField>