srcMyCoreApp/main/default/objects/Account/fields/RunTestLevel__c.field-meta.xml
<CustomField>
    <fullName>RunTestLevel__c</fullName>
    <label>RunTestLevel</label>
    <length>18</length>
    <type>Text</type>
</CustomField>