srcMyCoreApp/main/default/objects/Account/fields/sai_anna_Backchecker2__c.field-meta.xml
<CustomField>
    <fullName>sai_anna_Backchecker2__c</fullName>
    <label>sai anna Backchecker2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>