srcMyCoreApp/main/default/objects/Account/fields/Test_promotion_update__c.field-meta.xml
<CustomField>
    <fullName>Test_promotion_update__c</fullName>
    <label>Test promotion update</label>
    <length>100</length>
    <type>Text</type>
</CustomField>